test set up fixed, edit tests, and add navbar.css

--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,16 @@
 
 html {
   --poppy: hsla(356, 74%, 52%, 1);
-  --cambridge-blue: hsla(132, 27%, 63%, 1);
+  --purple: rgb(145, 106, 222);
   --lemon-chiffon: hsla(58, 74%, 85%, 1);
   --buff: hsla(27, 64%, 65%, 1);
   --bistre: hsla(10, 31%, 19%, 1);
   --off-white: hsla(45, 29%, 97%, 1);
 
   --background-color: var(--off-white);
-  --accent-color: var(--cambridge-blue);
+  --accent-color: var(--purple);
   background-color: var(--background-color);
+  
 }
 
 .wrapper {
@@ -94,61 +95,6 @@ form button[type=button]:hover {
   border-color: var(--accent-color);
 }
 
-nav {
-  margin: 0;
-  padding-top: 0.5rem;
-  background-color: var(--accent-color);
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 2rem;
-  padding: 0;
-}
-
-nav a {
-  color: var(--background-color);
-  display: block;
-  --padding: 1rem;
-  padding: var(--padding);
-  text-decoration: none;
-  font-weight: bold;
-  --border-radius: 15px;
-  border-radius: 5px 5px 0 0;
-  position: relative;
-}
-nav a:hover::before,
-nav a:focus::before {
-  content: '';
-  position: absolute;
-  width: var(--border-radius);
-  height: var(--border-radius);
-  border-radius: 0 0 100vw 0;
-  box-shadow: 5px 5px 0 5px var(--background-color);
-  background-color: var(--accent-color);
-  bottom: 0;
-  left: calc(var(--padding) * -1 + 1px);
-}
-nav a:hover::after,
-nav a:focus::after {
-  content: '';
-  position: absolute;
-  width: var(--border-radius);
-  height: var(--border-radius);
-  border-radius: 0 0 0 100vw;
-  box-shadow: -5px 5px 0 5px var(--background-color);
-  background-color: var(--accent-color);
-  bottom: 0;
-  right: calc(var(--padding) * -1 + 1px);
-}
-
-nav a:hover,
-nav a:focus {
-  background-color: var(--background-color);
-  color: var(--accent-color);
-  outline: none;
-}
 
 .person-container {
   border: 2px solid var(--accent-color);
