--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -9,3 +9,12 @@
     width: 100%; 
     color:black;
 }
+
+
+.gallery-image {
+    width: 100%;
+    height: auto;
+    border-radius: 12px;
+    object-fit: cover;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
