Made some changes to profile card

--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -8,7 +8,7 @@
   }
   
   .profile-card {
-    background: white;
+    background: #ffbfd5;
     padding: 2rem;
     border-radius: 10px;
     text-align: center;
